pxc/tests/test_025_slice/set1.px

public namespace set1;
import core::common -;

function void test1()
{
  varray{int} x;
  varray{int} y;
  x.resize(1000, int());
  y.resize(1000, int());
  slice{int} xs = x[0..100];
  slice{int} ys = y[0..100];
  ys = xs; // error
}

